Fixed star counter being slightly misaligned on horizontal layout

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ noscript > span {
 }
 .characterDiv {
 	position: relative;
-	margin-bottom: 10px;
+	margin-bottom: 11px;
 	pointer-events: none;
 }
 .characterDiv div {
